crates/rimz/src/sidebar_renderer/render/snapshots/rimz__sidebar_renderer__render__tests__worktree_attention_map.snap
---
source: crates/rimz/src/sidebar_renderer/render/tests.rs
assertion_line: 83
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 3
 ────────────────────────────────────
 ? 2   ! 0   ○ 0   ⏸︎ 0     ⢿ 1   ✓ 0

▏⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄
▌? claude
▌  permission
▌  ▢ ──────────────────────────    0%
▏
▏⣾ codex · GPT 5.5 · 258k
▏  add tests
▏  ▢ ──────────────────────────    0%

 ┄ external ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄ ? 1
 ? deploy.sh
   Deploy staging?
        ␣ next ?!   ? for help
