crates/rimz/src/sidebar_renderer/render/snapshots/rimz__sidebar_renderer__render__tests__worktree_dirty_tree_keeps_the_cluster.snap
---
source: crates/rimz/src/sidebar_renderer/render/tests.rs
assertion_line: 83
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 1
 ────────────────────────────────────
 ? 0   ! 0   ○ 1   ⏸︎ 0     ⢿ 0   ✓ 0

▏⑂ feature-migration ┄┄┄┄┄┄┄┄┄┄┄┄┄ ⇣5
▌○ codex · 258k
▌  .



              ? for help
