crates/rimz/src/sidebar_renderer/render/snapshots/rimz__sidebar_renderer__render__tests__worktree_equal_to_trunk.snap
---
source: crates/rimz/src/sidebar_renderer/render/tests.rs
assertion_line: 83
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 1
 ────────────────────────────────────
 ? 0   ! 0   ○ 1   ⏸︎ 0     ⢿ 0   ✓ 0

▏⑂ feature-migration ┄┄┄┄┄┄┄┄┄ ≡ main
▌○ codex · 258k
▌  ...



              ? for help
